--- a/hardware/pcb/hestia/hestia.kibot.yml
+++ b/hardware/pcb/hestia/hestia.kibot.yml
@@ -5,6 +5,11 @@ global:
   output: '%f-%i%I%v-%d.%x'   # include schematic date in all filenames
   date_time_format: '%Y%m%d'  # exclude time from %d in file names
 
+# Uncomment these on main where the checks are fixed
+#preflight:
+#  run_drc: true
+#  run_erc: true
+
 outputs:
 # BOM
 - name: bom_csv
@@ -13,6 +18,12 @@ outputs:
   options:
     format: CSV
     count_smd_tht: true
+
+# Schematic
+- name: basic_pdf_sch_print
+  comment: Schematic in PDF format
+  type: pdf_sch_print
+  dir: schematic
 
 # Board views (no components)
 - name: board_top
@@ -71,12 +82,6 @@ outputs:
     view: bottom
     rotate_x: 3
     rotate_z: 7
-
-# Schematic
-- name: basic_pdf_sch_print
-  comment: Schematic in PDF format
-  type: pdf_sch_print
-  dir: schematic
 
 # Gerbers & drill files - PCBWay as a demo
 - name: pcbway_gerbers
