Fix workflow path patterns so build triggers on changes correctly

--- a/.github/workflows/kibot-workflow.yml
+++ b/.github/workflows/kibot-workflow.yml
@@ -4,10 +4,8 @@ name: "Kibot PCB build"
 on:
   push:
     paths:
-      - '*.kicad_sch'
-      - '*.kicad_pcb'
+      - 'hardware/pcb/**'
       - '.github/workflows/kibot*'
-      - '*.kibot.yml'
       - 'scripts/kibot*'
 
 jobs:
