--- a/hardware/pcb/hestia/hestia.kibot.yml
+++ b/hardware/pcb/hestia/hestia.kibot.yml
@@ -5,7 +5,7 @@ global:
   output: '%f-%i%I%v-%d.%x'   # include schematic date in all filenames
   date_time_format: '%Y%m%d'  # exclude time from %d in file names
 
-# Uncomment these on main where the checks are fixed
+# TODO: make these exclusions more specific or fix them
 preflight:
   run_drc: true
   run_erc: true
@@ -20,6 +20,14 @@ preflight:
     - error: power_pin_not_driven
     - error: pin_to_pin
     # do not add more items to this list - fix them!
+
+filters:
+- name: only_jlc_parts
+  comment: Only parts with JLC (LCSC) code
+  type: generic
+  include_only:
+  - column: 'LCSC Part'
+    regex: ^C\d+
 
 outputs:
 # Report
@@ -169,7 +177,7 @@ outputs:
     rotate_x: 3
     rotate_z: 7
 
-# Gerbers & drill files - PCBWay as a demo
+# PCBWay gerbers & drill files
 - name: pcbway_gerbers
   comment: Gerbers compatible with PCBWay
   type: gerber
@@ -245,5 +253,98 @@ outputs:
       dest: /
     - from_output: pcbway_drill
       dest: /
-    move_files: false
+    move_files: true
 
+# JLC gerbers and drill files
+- name: jlcpcb_gerbers
+  comment: Gerbers compatible with JLCPCB
+  type: gerber
+  dir: manufacturers/jlcpcb
+  options:
+    exclude_edge_layer: true
+    exclude_pads_from_silkscreen: true
+    plot_sheet_reference: false
+    plot_footprint_refs: true
+    plot_footprint_values: false
+    force_plot_invisible_refs_vals: false
+    tent_vias: true
+    use_protel_extensions: true
+    create_gerber_job_file: false
+    disable_aperture_macros: true
+    gerber_precision: 4.6
+    use_gerber_x2_attributes: false
+    use_gerber_net_attributes: false
+    line_width: 0.1
+    subtract_mask_from_silk: true
+    inner_extension_pattern: .gp%n
+  layers: *id002
+- name: jlcpcb_drill
+  comment: Drill files compatible with JLCPCB
+  type: excellon
+  dir: manufacturers/jlcpcb
+  options:
+    pth_and_npth_single_file: false
+    pth_id: -PTH
+    npth_id: -NPTH
+    metric_units: true
+    map: gerber
+    route_mode_for_oval_holes: false
+    output: '%f%i.%x'
+- name: jlcpcb_position
+  comment: Pick and place file, JLCPCB style
+  type: position
+  dir: manufacturers/jlcpcb
+  options:
+    output: '%f_cpl_jlc.%x'
+    format: CSV
+    units: millimeters
+    separate_files_for_front_and_back: false
+    only_smd: true
+    columns:
+    - id: Ref
+      name: Designator
+    - Val
+    - Package
+    - id: PosX
+      name: Mid X
+    - id: PosY
+      name: Mid Y
+    - id: Rot
+      name: Rotation
+    - id: Side
+      name: Layer
+- name: jlcpcb_bom
+  comment: BOM for JLCPCB
+  type: bom
+  dir: manufacturers/jlcpcb
+  options:
+    output: '%f_%i_jlc.%x'
+    exclude_filter: only_jlc_parts
+    ref_separator: ','
+    columns:
+    - field: Value
+      name: Comment
+    - field: References
+      name: Designator
+    - Footprint
+    - field: 'LCSC Part'
+      name: 'LCSC Part #'
+    csv:
+      hide_pcb_info: true
+      hide_stats_info: true
+      quote_all: true
+- name: jlcpcb
+  comment: ZIP file for JLCPCB
+  type: compress
+  dir: manufacturers
+  options:
+    files:
+    - from_output: jlcpcb_gerbers
+      dest: /
+    - from_output: jlcpcb_drill
+      dest: /
+    - from_output: jlcpcb_position
+      dest: /
+    - from_output: jlcpcb_bom
+      dest: /
+    move_files: true
