msp430: automated Eclipse config updates

--- a/software/msp430_adcToI2c/.settings/org.eclipse.core.resources.prefs
+++ b/software/msp430_adcToI2c/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,12 @@
 eclipse.preferences.version=1
+encoding//Debug/build/CMakeFiles/3.23.2/CompilerIdC/subdir_rules.mk=UTF-8
+encoding//Debug/build/CMakeFiles/3.23.2/CompilerIdC/subdir_vars.mk=UTF-8
+encoding//Debug/build/CMakeFiles/3.23.2/CompilerIdCXX/subdir_rules.mk=UTF-8
+encoding//Debug/build/CMakeFiles/3.23.2/CompilerIdCXX/subdir_vars.mk=UTF-8
+encoding//Debug/build/CMakeFiles/hestia-msp430f2618.elf.dir/subdir_rules.mk=UTF-8
+encoding//Debug/build/CMakeFiles/hestia-msp430f2618.elf.dir/subdir_vars.mk=UTF-8
+encoding//Debug/build/subdir_rules.mk=UTF-8
+encoding//Debug/build/subdir_vars.mk=UTF-8
 encoding//Debug/makefile=UTF-8
 encoding//Debug/objects.mk=UTF-8
 encoding//Debug/sources.mk=UTF-8
