msp430: Add read heater mode command
- add COMMAND_READ_HEATER_MODE
- rename command constants to clarify read/write
- reformat code to K&R
- portability fixes for gcc (CLion)

--- a/software/msp430_adcToI2c/.cproject
+++ b/software/msp430_adcToI2c/.cproject
@@ -97,6 +97,7 @@
 					</fileInfo>
 					<sourceEntries>
 						<entry excluding="build" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="build/CMakeFiles/Progress"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
