--- a/software/hestia-i2c/requirements.txt
+++ b/software/hestia-i2c/requirements.txt
@@ -1,6 +1,8 @@
 attrs==22.1.0
+Brotli==1.0.9
 click==8.1.3
 Flask==2.2.2
+Flask-Compress==1.13
 iniconfig==1.1.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
