hestia-i2c: run services as debian user

--- a/software/hestia-i2c/config/hestia-app.service
+++ b/software/hestia-i2c/config/hestia-app.service
@@ -2,6 +2,8 @@
 Description=Hestia app
 
 [Service]
+User=debian
+Group=debian
 Environment=HESTIA_LOG_PATH=/mnt/data/hestia/logs
 Environment=TZ=Australia/Sydney
 Environment=FLASK_PORT=5000
