--- a/hardware/pcb/hestia/hestia.kibot.yml
+++ b/hardware/pcb/hestia/hestia.kibot.yml
@@ -138,28 +138,6 @@ outputs:
   dir: render
   run_by_default: false  # output is too big to include by default (>10 MB)
 
-# 2D renders (fast)
-- name: render_top
-  comment: Top render
-  type: render_3d
-  dir: render
-  output_id: render-top
-  options:
-    output: '%f-%I-%D.%x'  # don't include '3D_' in name
-    view: top
-    width: 1200
-    height: 1200
-    zoom: 3
-    ray_tracing: true
-- name: render_bottom
-  comment: Bottom render
-  type: render_3d
-  dir: render
-  output_id: render-bottom
-  extends: render_top
-  options:
-    view: bottom
-
 # PCBWay gerbers & drill files
 - name: pcbway_gerbers
   comment: Gerbers compatible with PCBWay
@@ -231,6 +209,37 @@ outputs:
     pth_id: ''
     npth_id: -NPTH
     output: '%f%i.drl'
+- name: pcbway_bom
+  comment: BOM for PCBWay
+  type: bom
+  dir: manufacturers/pcbway
+  options:
+    output: '%f_%i_pcbway.%x'
+    ref_separator: ','
+    columns:
+    - field: Row
+      name: 'Item #'
+    - field: References
+      name: Designator
+    - field: Quantity Per PCB
+      name: Qty
+    - field: ''
+      name: 'Manufacturer'
+    - field: Part
+      name: 'Mfg Part #'
+    - field: Value
+      name: 'Description / Value'
+    - field: Footprint
+      name: 'Package/Footprint'
+    - field: Type
+      join:
+        text: 'SMD'
+    - field: Description
+      name: 'Your Instructions / Notes'
+    csv:
+      hide_pcb_info: true
+      hide_stats_info: true
+      quote_all: true
 - name: pcbway
   comment: ZIP file for PCBWay
   type: compress
@@ -241,6 +250,8 @@ outputs:
     - from_output: pcbway_gerbers
       dest: /
     - from_output: pcbway_drill
+      dest: /
+    - from_output: pcbway_bom
       dest: /
     move_files: true
 
@@ -338,7 +349,29 @@ outputs:
       dest: /
     move_files: true
 
-# 3D renders (slow - do these last)
+# 2D renders
+- name: render_top
+  comment: Top render
+  type: render_3d
+  dir: render
+  output_id: render-top
+  options:
+    output: '%f-%I-%D.%x'  # don't include '3D_' in name
+    view: top
+    width: 1200
+    height: 1200
+    zoom: 3
+    ray_tracing: true
+- name: render_bottom
+  comment: Bottom render
+  type: render_3d
+  dir: render
+  output_id: render-bottom
+  extends: render_top
+  options:
+    view: bottom
+
+# 3D renders
 - name: render_top_angle
   comment: Top angle render
   type: render_3d
