--- a/hardware/pcb/hestia/hestia.kibot.yml
+++ b/hardware/pcb/hestia/hestia.kibot.yml
@@ -10,8 +10,8 @@ preflight:
   fill_zones: true
   run_drc: true
   run_erc: true
-  filters:
-    # DRC and ERC have no known warnings (6 Mar 2023)
+  # DRC and ERC have no known warnings (6 Mar 2023)
+  # filters:
     # - error: track_dangling
 
 filters:
@@ -224,6 +224,10 @@ outputs:
       name: 'Package/Footprint'
     - name: Type
       field: Type
+    - field: 'Digikey Part'
+      name: 'Digi-Key Part #'
+    - field: 'Mouser Part'
+      name: 'Mouser Part #'
     - field: Description
       name: 'Your Instructions / Notes'
     csv:
