Include Mfg part number in PCBWay BOM

--- a/hardware/pcb/hestia/hestia.kibot.yml
+++ b/hardware/pcb/hestia/hestia.kibot.yml
@@ -220,7 +220,7 @@ outputs:
       name: Qty
     - name: 'Manufacturer'
       field: Manufacturer
-    - field: Part
+    - field: 'Mfr PN'
       name: 'Mfg Part #'
     - field: Value
       name: 'Description / Value'
