hestia-pcb: fix paths in kibot build

--- a/.github/workflows/kibot-workflow.yml
+++ b/.github/workflows/kibot-workflow.yml
@@ -4,7 +4,7 @@ name: "Kibot PCB build"
 on:
   push:
     paths:
-      - 'hardware/pcb/**'
+      - 'hestia-pcb/**'
       - '.github/workflows/kibot*'
       - 'scripts/kibot*'
 
