--- a/hestia-sat/.cargo/config.toml
+++ b/hestia-sat/.cargo/config.toml
@@ -2,4 +2,4 @@
 target = "arm-unknown-linux-gnueabihf"
 
 [target.arm-unknown-linux-gnueabihf]
-linker = "arm-linux-gcc" # linker must be on PATH
+linker = "/Users/mryall/bin/arm-linux-gcc" # linker must be on PATH
