--- a/hestia-dash/config/hestia-app.service
+++ b/hestia-dash/config/hestia-app.service
@@ -7,6 +7,7 @@ Group=debian
 Environment=HESTIA_LOG_PATH=/home/debian/data/hestia/logs
 Environment=TZ=Australia/Sydney
 Environment=FLASK_PORT=5000
+Environment=HESTIA_SENSOR_DISABLE=TH4,TH5,TH6,U4
 WorkingDirectory=/home/debian/src/mawson/hestia/hestia-dash/src
 ExecStart=/home/debian/src/mawson/hestia/hestia-dash/venv/bin/python -m hestia.app
 Restart=on-failure
