--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -22,6 +22,7 @@ chrono = "0.4.24"
 csv = "1.2.1"
 envy = "0.4.2"
 env_logger = "0.10.0"
+spin_sleep = "1.1.1"
 
 # ground = { git = "ssh://git@github.com/Cube-OS/ground", optional = true}
 
