--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -9,22 +9,10 @@ byteorder = "1.4.3"
 failure = "0.1.2"
 i2c-linux = "0.1.2"
 log = "0.4.17"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serial = "0.4.0"
-cubeos-error = { git = "ssh://git@github.com/Cube-OS/cubeos-error.git"}
-uart-rs = { git = "ssh://git@github.com/Cube-OS/uart-rs.git" }
 strum_macros = "0.24"
 chrono = "0.4.24"
 envy = "0.4.2"
 env_logger = "0.10.0"
 clap = { version = "4.3.0", features = ["derive"] }
-syn = "2.0.18"
-
-# ground = { git = "ssh://git@github.com/Cube-OS/ground", optional = true}
-
-# juniper = { version = "0.14.2", optional = true }
-
-# [features]
-# default = []
-# ground = ["dep:ground"]
-# debug = []
