--- a/hestia-sat/.cargo/config.toml
+++ b/hestia-sat/.cargo/config.toml
@@ -3,3 +3,4 @@ target = "arm-unknown-linux-gnueabihf"
 
 [target.arm-unknown-linux-gnueabihf]
 linker = "/Users/mryall/bin/arm-linux-gcc" # linker must be on PATH
+runner = "./upload.sh beagle:opt/"
