--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -17,3 +17,7 @@ envy = "0.4.2"
 env_logger = "0.10.0"
 clap = { version = "4.3.0", features = ["derive"] }
 dotenv = "0.15.0"
+actix-web = "4.3.1"
+linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
+serde_json = "1.0.96"
+mime = "0.3.17"
