#30: add traces to errors logged

--- a/hestia-sat/systemd/uts-web.service
+++ b/hestia-sat/systemd/uts-web.service
@@ -8,6 +8,7 @@ Environment=UTS_LOG_PATH=/home/debian/data/uts/logs
 Environment=UTS_I2C_BUS=2
 Environment=UTS_HTTP_PORT=5001
 Environment=RUST_LOG=info
+Environment=RUST_BACKTRACE=1
 Environment=TZ=Australia/Sydney
 WorkingDirectory=/home/debian/opt/hestia-sat
 ExecStart=/home/debian/opt/hestia-sat/uts-web
