--- a/hestia-sat/systemd/uts-log.service
+++ b/hestia-sat/systemd/uts-log.service
@@ -7,6 +7,7 @@ Group=debian
 Environment=UTS_LOG_PATH=/home/debian/data/uts/logs
 Environment=UTS_I2C_BUS=2
 Environment=RUST_LOG=warn
+Environment=RUST_BACKTRACE=1
 Environment=TZ=UTC
 WorkingDirectory=/home/debian/opt/hestia-sat
 ExecStart=/home/debian/opt/hestia-sat/uts-log
