--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -22,3 +22,4 @@ linked-hash-map = { version = "0.5.6", features = ["serde", "serde_impl"] }
 serde_json = "1.0.96"
 mime = "0.3.17"
 glob = "0.3.1"
+actix-cors = "0.6.4"
