--- a/hestia-sat/systemd/uts-log.service
+++ b/hestia-sat/systemd/uts-log.service
@@ -4,13 +4,13 @@ Description=UTS payload logger
 [Service]
 User=debian
 Group=debian
-Environment=UTS_LOG_PATH=/home/debian/data/uts/logs
-Environment=UTS_I2C_BUS=2
+Environment=UTS_LOG_PATH=/home/debian/uts/logs
+Environment=UTS_I2C_BUS=1,2
 Environment=RUST_LOG=warn
 Environment=RUST_BACKTRACE=1
 Environment=TZ=UTC
-WorkingDirectory=/home/debian/opt/hestia-sat
-ExecStart=/home/debian/opt/hestia-sat/uts-log
+WorkingDirectory=/home/debian/uts/bin
+ExecStart=/home/debian/uts/bin/uts-log
 Restart=on-failure
 RestartSec=5s
 
