--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -24,3 +24,18 @@ mime = "0.3.17"
 glob = "0.3.1"
 actix-cors = "0.6.4"
 actix-files = "0.6.2"
+
+[lib]
+doctest = false
+
+[[bin]]
+name = "uts-cli"
+test = false
+
+[[bin]]
+name = "uts-log"
+test = false
+
+[[bin]]
+name = "uts-web"
+test = false
