--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -25,6 +25,9 @@ glob = "0.3.1"
 actix-cors = "0.6.4"
 actix-files = "0.6.2"
 
+[dev-dependencies]
+assert_approx_eq = "1.1.0"
+
 [lib]
 doctest = false
 
