--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -24,6 +24,8 @@ mime = "0.3.17"
 glob = "0.3.1"
 actix-cors = "0.6.4"
 actix-files = "0.6.2"
+toml = "0.7.6"
+duration-str = "0.5.1"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
