--- a/hestia-sat/uts-programs.toml
+++ b/hestia-sat/uts-programs.toml
@@ -1,16 +1,16 @@
 [[programs]]
-heating_time = "5s"
+heat_board = "Top"
+heat_time = "5s"
+heat_duty = 1.0
 temp_sensor = "TH1"
 temp_abort = 80.0
-cooling_time = "10s"
-heater_position = "Top"
-heater_duty = 1.0
+cool_time = "10s"
 
 [[programs]]
-heating_time = "3s"
+heat_board = "Bottom"
+heat_time = "3s"
+heat_duty = 1.0
 temp_sensor = "J7"
 temp_abort = 100.0
 thermostat = 80.0
-cooling_time = "10s"
-heater_position = "Bottom"
-heater_duty = 1.0
+cool_time = "10s"
