--- a/hestia-sat/uts-programs.toml
+++ b/hestia-sat/uts-programs.toml
@@ -1,16 +1,16 @@
 [[programs]]
-heat_board = "Top"
-heat_time = "5s"
+heat_board = "Bottom"
+heat_time = "60s"
 heat_duty = 1.0
 temp_sensor = "TH1"
-temp_abort = 80.0
-cool_time = "10s"
+temp_abort = 90.0
+thermostat = 80.0
+cool_time = "1m 30s"
 
 [[programs]]
 heat_board = "Bottom"
-heat_time = "3s"
-heat_duty = 1.0
+heat_time = "30s"
+heat_duty = 0.5
 temp_sensor = "J7"
-temp_abort = 100.0
-thermostat = 80.0
-cool_time = "10s"
+temp_abort = 60.0
+cool_time = "60s"
