--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -26,6 +26,8 @@ actix-cors = "0.6.4"
 actix-files = "0.6.2"
 toml = "0.7.6"
 duration-str = "0.5.1"
+serial_int = "2.0.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
