--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -29,6 +29,7 @@ duration-str = "0.5.1"
 serial_int = "2.0.0"
 lazy_static = "1.4.0"
 hostname = "0.3.1"
+ctrlc = "3.4.0"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
