--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -31,6 +31,7 @@ lazy_static = "1.4.0"
 hostname = "0.3.1"
 ctrlc = "3.4.0"
 colored = "2.0.4"
+syslog = "6.1.0"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
