--- a/hestia-fw/.project
+++ b/hestia-fw/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>msp430_adcToI2c</name>
+	<name>hestia-fw</name>
 	<comment></comment>
 	<projects>
 	</projects>
