--- a/hestia-sat/systemd/uts-web.service
+++ b/hestia-sat/systemd/uts-web.service
@@ -7,6 +7,7 @@ Group=debian
 Environment=UTS_LOG_PATH=/home/debian/uts/logs
 Environment=UTS_I2C_BUS=2
 Environment=UTS_HTTP_PORT=5001
+Environment=UTS_CORS_ENABLE=true
 Environment=RUST_LOG=info
 Environment=RUST_BACKTRACE=1
 Environment=TZ=Australia/Sydney
