--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -31,6 +31,10 @@ lazy_static = "1.4.0"
 hostname = "0.3.1"
 ctrlc = "3.4.0"
 colored = "2.0.4"
+self_update = { version = "0.38.0", features = ["archive-tar", "compression-flate2"] }
+tempfile = "3.8.0"
+reqwest = "0.11.20"
+openssl = { version = "0.10.57", features = ["vendored"] }
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
@@ -49,6 +53,10 @@ test = false
 [[bin]]
 name = "uts-run"
 test = true
+
+[[bin]]
+name = "uts-update"
+test = false
 
 [[bin]]
 name = "uts-web"
