--- a/hestia-sat/systemd/uts-web.service
+++ b/hestia-sat/systemd/uts-web.service
@@ -5,7 +5,7 @@ Description=UTS payload web dashboard
 User=debian
 Group=debian
 Environment=UTS_LOG_PATH=/home/debian/uts/logs
-Environment=UTS_I2C_BUS=2
+Environment=UTS_I2C_BUS=1,2
 Environment=UTS_HTTP_PORT=5001
 Environment=UTS_CORS_ENABLE=true
 Environment=RUST_LOG=info
