--- a/hestia-sat/.cargo/config.toml
+++ b/hestia-sat/.cargo/config.toml
@@ -2,5 +2,5 @@
 target = ["arm-unknown-linux-gnueabihf", "aarch64-apple-darwin"]
 
 [target.arm-unknown-linux-gnueabihf]
-linker = "/Users/mryall/bin/arm-linux-gcc" # linker must be on PATH
+linker = "arm-linux-gcc" # linker must be on PATH
 runner = "./upload.sh"
