--- a/hestia-sat/.cargo/config.toml
+++ b/hestia-sat/.cargo/config.toml
@@ -4,3 +4,9 @@ target = ["arm-unknown-linux-gnueabihf", "aarch64-apple-darwin"]
 [target.arm-unknown-linux-gnueabihf]
 linker = "arm-linux-gcc" # linker must be on PATH
 runner = "./upload.sh"
+
+[profile.release]
+debug = "line-tables-only"
+split-debuginfo = "packed"
+opt-level = "z"
+lto = "thin"
