--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -36,6 +36,7 @@ tempfile = "3.8.0"
 reqwest = "0.11.20"
 openssl = { version = "0.10.57", features = ["vendored"] }
 syslog = "6.1.0"
+bzip2 = "0.4"
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
