--- a/hestia-sat/Cargo.toml
+++ b/hestia-sat/Cargo.toml
@@ -36,7 +36,7 @@ tempfile = "3.8.0"
 reqwest = "0.11.20"
 openssl = { version = "0.10.57", features = ["vendored"] }
 syslog = "6.1.0"
-bzip2 = "0.4"
+flate2 = { version = "1.0.28", features = ["zlib"] }
 
 [dev-dependencies]
 assert_approx_eq = "1.1.0"
