--- a/hestia-sat/kubos/flight.env
+++ b/hestia-sat/kubos/flight.env
@@ -2,7 +2,7 @@ RUST_LOG=info
 RUST_BACKTRACE=1
 UTS_I2C_BUS=1,2
 UTS_LOG_PATH=/home/kubos/UTS/logs
-UTS_COMPRESS_LOGS=true
+UTS_COMPRESS_LOGS=false
 UTS_PROGRAM_FILE=/home/kubos/UTS/programs/flight.toml
 UTS_INSTALL_PATH=/home/kubos/UTS
 UTS_SYSLOG=true
