#80 Set UTS_DOWNLOAD_PATH for flight

--- a/hestia-sat/kubos/flight.env
+++ b/hestia-sat/kubos/flight.env
@@ -6,3 +6,4 @@ UTS_COMPRESS_LOGS=false
 UTS_PROGRAM_FILE=/home/kubos/UTS/programs/flight.toml
 UTS_INSTALL_PATH=/home/kubos/UTS
 UTS_SYSLOG=true
+UTS_DOWNLOAD_PATH=/home/kubos/download
