--- a/hestia-sat/kubos/uts-tasks-tvac2.json
+++ b/hestia-sat/kubos/uts-tasks-tvac2.json
@@ -22,6 +22,14 @@
         "name": "uts-cli",
         "args": ["run", "/home/kubos/UTS/programs/tvac2.toml"]
       }
+    },
+    {
+      "description": "Zip data for download",
+      "time": "2024-01-01 00:00:00",
+      "app": {
+        "name": "uts-cli",
+        "args": ["zip"]
+      }
     }
   ]
 }
